Blockquote review updates + SVG quote v3.0

--- a/packages/blockquote/src/scss/_component.scss
+++ b/packages/blockquote/src/scss/_component.scss
@@ -1,118 +1,119 @@
 /* Blocks */
-  .blockquote {
-    position: relative;
-    width: calc(100% - 30px);
-    height: auto;
-    margin-left: 30px;
-    padding: 15px 20px;
-    border: none;
-    color: $uq-purple;
-    font-style: italic;
-  }
-  
-  .blockquote.blockquote--light {
-    color: $uq-purple;
-  }
-  
-  .blockquote.blockquote--dark {
-    color: $uq-white;
-    background-color: $uq-purple;
-  }
-  
-  .blockquote.blockquote--boxed {
-    width: 100%;
-    margin-left: 0;
-    padding: 50px 50px;
-    background: $uq-purple-gradient /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  }
-  
-  .blockquote::before {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 5px;
-    height: 100%;
-    background-color: $uq-purple;
-    content:'';
-  }
-  
-  .blockquote.blockquote--light::before {
-    background-color: $uq-purple;
-  }
-  
-  .blockquote.blockquote--dark::before {
-    background-color: $uq-white;
-  }
-  
-  .blockquote.blockquote--boxed::before {
-    position: absolute;
-    top: 30px;
-    left: 30px;
-    width: 5px;
-    height: calc(100% - 60px);
-    content: '';
-  }
-  
-  .blockquote.blockquote--boxed.blockquote--quotemark::before {
-    position: absolute;
-    top: 40px;
-    left: 10px;
-  }
+.blockquote {
+	border: none;
+	color: $uq-purple;
+	font-style: italic;
+	height: auto;
+	margin-left: 30px;
+	padding: 15px 20px;
+	position: relative;
+	width: calc(100% - 30px);
+}
 
-  .blockquote.blockquote--quotemark::before {
-    position: absolute;
-    top: 0px;
-    left: -20px;
-    width: 34px;
-    height: 28px;
-    stroke-width: 0;
-    stroke: #000;
-    fill: #000;
-    background-image: url('~@uq-uidf/blockquote/src/images/icon-open-doublequote-light.svg');
-    background-size: cover;
-    background-color: transparent;
-    display: inline-block;
-  }
+.blockquote.blockquote--light {
+	color: $uq-purple;
+}
 
-  .blockquote.blockquote--light.blockquote--quotemark::before {
-    background-image: url('~@uq-uidf/blockquote/src/images/icon-open-doublequote-light.svg');
-  }
+.blockquote.blockquote--dark {
+	background-color: $uq-purple;
+	color: $uq-white;
+}
 
-  .blockquote.blockquote--dark.blockquote--quotemark::before {
-    background-image: url('~@uq-uidf/blockquote/src/images/icon-open-doublequote-dark.svg');
-  }
-  
-  /* Elements */
-  .blockquote__body {
-    font-family: 'Merriweather', serif;
-    font-size: 1.2rem;
-    font-weight: 300;
-    line-height: 1.5;
-  }
-  
-  .blockquote__footer {
-    font-size: 0.875rem;
-  }
-  
-  .blockquote.blockquote--dark .blockquote__link,
-  .blockquote.blockquote--dark .blockquote__link:link,
-  .blockquote.blockquote--dark .blockquote__link:visited,
-  .blockquote.blockquote--dark .blockquote__link:active {
-    color: $uq-white;
-    text-decoration: underline;
-  }
-  
-  .blockquote.blockquote--dark .blockquote__link:hover {
-    text-decoration: none;
-  }
-  
-  blockquote cite {
-    display: inline-block !important;
-  }
+.blockquote.blockquote--boxed {
+	background: $uq-purple-gradient;
+	margin-left: 0;
+	padding: 50px 50px;
+	width: 100%;
+}
 
-  .blockquote__body p:first-child {
-    margin-top: 0;
-  }
-  .blockquote__footer p:last-child {
-    margin-bottom: 0;
-  }
+.blockquote::before {
+	background-color: $uq-purple;
+	content: '';
+	height: 100%;
+	left: 0;
+	position: absolute;
+	top: 0;
+	width: 5px;
+}
+
+.blockquote.blockquote--light::before {
+	background-color: $uq-purple;
+}
+
+.blockquote.blockquote--dark::before {
+	background-color: $uq-white;
+}
+
+.blockquote.blockquote--boxed::before {
+	content: '';
+	height: calc(100% - 60px);
+	left: 30px;
+	position: absolute;
+	top: 30px;
+	width: 5px;
+}
+
+.blockquote.blockquote--quotemark::before {
+	background-color: transparent;
+	background-image: url('~@uq-uidf/blockquote/src/images/icon-open-doublequote-light.svg');
+	background-size: cover;
+	display: inline-block;
+	fill: #000;
+	height: 28px;
+	left: -20px;
+	position: absolute;
+	stroke: #000;
+	stroke-width: 0;
+	top: 0px;
+	width: 34px;
+}
+
+.blockquote.blockquote--light.blockquote--quotemark::before {
+	background-image: url('~@uq-uidf/blockquote/src/images/icon-open-doublequote-light.svg');
+}
+
+.blockquote.blockquote--dark.blockquote--quotemark::before {
+	background-image: url('~@uq-uidf/blockquote/src/images/icon-open-doublequote-dark.svg');
+}
+
+.blockquote.blockquote--boxed.blockquote--quotemark::before {
+	left: 10px;
+	position: absolute;
+	top: 40px;
+}
+
+/* Elements */
+.blockquote__body {
+	font-family: 'Merriweather', serif;
+	font-size: 1.2rem;
+	font-weight: 300;
+	line-height: 1.5;
+}
+
+.blockquote__footer {
+	font-size: 0.875rem;
+}
+
+.blockquote.blockquote--dark .blockquote__link,
+.blockquote.blockquote--dark .blockquote__link:link,
+.blockquote.blockquote--dark .blockquote__link:visited,
+.blockquote.blockquote--dark .blockquote__link:active {
+	color: $uq-white;
+	text-decoration: underline;
+}
+
+.blockquote.blockquote--dark .blockquote__link:hover {
+	text-decoration: none;
+}
+
+blockquote cite {
+	display: inline-block !important;
+}
+
+.blockquote__body p:first-child {
+	margin-top: 0;
+}
+
+.blockquote__footer p:last-child {
+	margin-bottom: 0;
+}
