added spacing partial import and added pipes to footer menu

--- a/packages/footer/src/scss/_component.scss
+++ b/packages/footer/src/scss/_component.scss
@@ -57,7 +57,11 @@
                 margin: 0;
                 padding: 0;
                 li {
-                    padding-left: 2em;
+                    padding-left: var(--space--md);
+                    &+:before {
+                        content: " | ";
+                        padding-right: var(--space--md);
+                    }
                     &:first-of-type {
                         padding-left: 0;
                     }
