--- a/packages/core/src/scss/_global.scss
+++ b/packages/core/src/scss/_global.scss
@@ -1,7 +1,8 @@
 // Variables, functions, and mixins
 @import "_partials/compass";
+@import "_partials/spacing";
 // Primary font stack
-$roboto : 'Roboto',
+$roboto: 'Roboto',
 "Helvetica Neue",
 Helvetica,
 Arial,
@@ -9,13 +10,13 @@ sans-serif;
 // Monospace font stacks
 // For an explanation of why "sans-serif" is at the end of this list, see
 // http://meyerweb.com/eric/thoughts/2010/02/12/fixed-monospace-sizing/
-$courier : "Courier New",
+$courier: "Courier New",
 "DejaVu Sans Mono",
 monospace,
 sans-serif;
 // Now create some variables using the font stacks we want on this site.
-$font-body : $roboto;
-$font-monospace : $courier;
+$font-body: $roboto;
+$font-monospace: $courier;
 $font-weight-bold: 500;
 // Foundation default settings
 $body-font-color: #2b2b2b;
@@ -28,7 +29,7 @@ $select-bg-color: #fff;
 $site-footer-font-size: 0.875rem;
 //removes column gutter so edges of block grid align with grid
 $align-block-grid-to-grid: true;
-$gutter : 20px;
+$gutter: 20px;
 $half-gutter: ($gutter / 2);
 //
 // Misc
