ITSADSSD-17626 Fix footer issues for PR

--- a/packages/storybook-html/src/components/footer-classic/footer.html
+++ b/packages/storybook-html/src/components/footer-classic/footer.html
@@ -1,1 +1,3 @@
-<uq-footer-classic></uq-footer-classic>
+<uq-footer-classic page-url="[Your current page URL here]" page-last-updated="20 Jun 2019"></uq-footer-classic>
+<br/>
+<uq-footer-classic page-url="[Your current page URL here]"></uq-footer-classic>
