added merriweather reference to storybook head

--- a/packages/core/src/scss/_global.scss
+++ b/packages/core/src/scss/_global.scss
@@ -7,6 +7,9 @@ $roboto: 'Roboto',
 Helvetica,
 Arial,
 sans-serif;
+$merriweather: "Merriweather",
+Georgia,
+serif;
 // Monospace font stacks
 // For an explanation of why "sans-serif" is at the end of this list, see
 // http://meyerweb.com/eric/thoughts/2010/02/12/fixed-monospace-sizing/
