--- a/packages/footer/src/scss/_component.scss
+++ b/packages/footer/src/scss/_component.scss
@@ -16,7 +16,7 @@
         .acknowledgement-statement {
             border-bottom: 1px solid rgba(255, 255, 255, 0.3);
             color: $site-footer-color;
-            //font-family: $merriweather;
+            font-family: $merriweather;
             font-size: 1rem;
             font-style: italic;
             font-weight: 300;
