ITSADSSD-18724 Fix header and footer issues for PR
Added more examples to Storybook-HTML.

--- a/packages/form/src/scss/_global.scss
+++ b/packages/form/src/scss/_global.scss
@@ -1,3 +1,8 @@
 // Variables, functions, and mixins
 
 @import '~foundation-sites/scss/foundation/components/forms';
+
+// Forms
+$form-required-color: #d6492a;
+$form-description-color: #666;
+$form-input-border-color: #ccc;
