--- a/packages/storybook-html/src/components/footer-classic/footer.html
+++ b/packages/storybook-html/src/components/footer-classic/footer.html
@@ -1,3 +1,7 @@
 <uq-footer-classic page-url="[Your current page URL here]" page-last-updated="20 Jun 2019"></uq-footer-classic>
 <br/>
-<uq-footer-classic page-url="[Your current page URL here]"></uq-footer-classic>
+<uq-footer-classic page-url="[Your current page URL here]" show-login="false"></uq-footer-classic>
+<br/>
+<uq-footer-classic page-url="[Your current page URL here]" show-login="true" login-url="#"></uq-footer-classic>
+<br/>
+<uq-footer-classic page-url="[Your current page URL here]" show-logout="" logout-url="#"></uq-footer-classic>
