--- a/packages/storybook-html/src/components/button/button.html
+++ b/packages/storybook-html/src/components/button/button.html
@@ -1,1 +1,28 @@
-<a href="#" class="button">Button</a>
+<a href="#" class="uq-button">Button</a>
+
+<a href="#" class="uq-button uq-button--secondary">Button secondary</a>
+<!-- Secondary button style. Used when there are multiple buttons and only one is the primary action. -->
+
+<a href="#" class="uq-button uq-button--outline">Button outline</a>
+<!-- Outline button style. Provides an alternative style that is less prominent on the page. Useful when there are multiple buttons down a long page. -->
+
+<a href="#" class="uq-button uq-button--outline uq-button--secondary"
+  >Button outline secondary</a
+>
+<!-- Secondary and outline button style. Outline and secondary styles can be combined. -->
+
+<a href="#" class="uq-button uq-button--tertiary uq-button--outline"
+  >Button tertiary outline</a
+>
+<!-- Tertiary and outline button style. Outline and tertiary styles can be combined. -->
+
+<a href="#" class="uq-button uq-button–-text">Button text</a>
+
+<a href="#" class="uq-button uq-button–-text uq-button--secondary"
+  >Button text</a
+>
+
+<a href="#" class="uq-button uq-button–-tiny">Button Tiny</a>
+<a href="#" class="uq-button uq-button–-small">Button Small</a>
+<a href="#" class="uq-button uq-button–-large">Button Large</a>
+<a href="#" class="uq-button uq-button–-expand">Button Expand</a>
