--- a/packages/storybook-html/src/components/button/button.scss
+++ b/packages/storybook-html/src/components/button/button.scss
@@ -1,2 +1,2 @@
-@import '~@uq-uidf/core/src/scss/_component';
+//@import '~@uq-uidf/core/src/scss/_component';
 @import '~@uq-uidf/button/src/scss/_component';
